--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,9 +1,5 @@
 @import 'nullstyle.scss'; // Нормализация
 
-body {
-    background-color: lightgray;
-}
-
 .container {
     max-width: 1920px;
     margin-right: auto;
@@ -11,6 +7,36 @@ body {
     padding-left: 75px;
     padding-right: 75px;
 }
+.heading {
+    font-size: 26px;
+    line-height: 31px;
+    font-weight: 700;
+    text-align: center;
+}
+.icon {
+    padding: 20px;
+    background-color: green;
+    border-radius: 100%;
+}
+.input {
+    padding: 20px;
+    display: block;
+    min-width: 400px;
+    border: 1px solid green;
+    border-radius: 50px;
+}
+
+.button {
+    padding: 20px;
+    background-color: green;
+    border-radius: 50px;
+    min-width: 400px;
+    font-size: 18px;
+    line-height: 20px;
+    color: #ffffff;
+}
+
+
 .header {
     padding: 20px 0;
     background-color: darkgreen;
@@ -94,21 +120,138 @@ body {
 }
 
 .advantages {
+    margin-bottom: 60px;
     &__heading {
         margin-bottom: 20px;
-        font-size: 26px;
-        line-height: 31px;
-        text-align: center;
         padding-top: 40px;
     }
     &__list {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
+        gap: 40px;
     }
     &__item {
         margin: 10px 0px;
         font-size: 16px;
         line-height: 23px;
         text-align: center;
+        display: flex;
+        align-items: center;
     }
+    &__icon {
+        margin-right: 20px;
+    }
+}
+
+.assortment {
+    margin-bottom: 60px;
+    &__heading {
+        margin-bottom: 40px;
+    }
+    &__list {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        gap: 40px;
+    }
+    &__item {
+        background-color: rgb(211, 201, 201);
+    }
+    &__img {
+        padding: 100px;
+        background-color: gray;
+    }
+    &__title {
+        padding: 10px;
+        font-size: 14px;
+        line-height: 15px;
+        font-weight: 700;
+    }
+    &__link {
+        text-decoration: none;
+        color: green;
+    }
+    &__text {
+        padding: 0 10px 20px;
+    }
+}
+
+.commerce {
+    background-color: gray;
+    &__container {
+        padding: 60px 0;
+    }
+    &__heading {
+        padding-bottom: 40px;
+    }
+    &__description {
+        margin-bottom: 60px;
+        max-width: 1000px;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+    }
+    &__text {
+        font-size: 15px;
+        line-height: 28px;
+        letter-spacing: 0.02em;
+        color: #d0d9de;
+        &_green {
+            color: green;
+        }
+    }
+    &__requestBlock{
+        width: 80%;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 40px;
+        background-color: white;
+        border-radius: 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    &__title {
+        font-size: 30px;
+        line-height: 35px;
+        color: #69a042;
+        font-weight: 700;
+        text-align: center;
+        &_second {
+            color: #443e3e;;
+        }
+    }
+    &__inputsBlock{
+        margin-top: 40px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    &__input {
+        margin-bottom: 20px;
+    }
+}
+
+.imageSection {
+    margin-bottom: 40px;
+    &__heading {
+        padding: 40px 0;
+        max-width: 800px;
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    &__block {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 20px;
+    }
+    &__img {
+        padding: 140px;
+        background-color: gray;
+    }
+}
+
+.footer {
+    padding: 100px 0;
+    background-color: darkgreen;
 }
